fixed line spacing in mobile view

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -16,3 +16,9 @@
   opacity: 1;
   transition: opacity 0.5s;
 }
+
+@media only screen and (min-width: 768px) {
+  #footer-line-break {
+    display: none;
+  }
+}
